Added llamaindex agent functionality

--- a/examples/llm/agents/requirements.yaml
+++ b/examples/llm/agents/requirements.yaml
@@ -19,6 +19,7 @@ channels:
   - defaults
 dependencies:
   - langchain=0.0.190
+  - numexpr=2.8.7
   - pip
   - requests-cache=1.1
   - sentence-transformers
@@ -32,5 +33,7 @@ dependencies:
   ####### Pip Dependencies (keep sorted!) #######
   - pip:
     - farm-haystack==1.22.1
+    - langchain==0.0.351
+    - llama-index==0.9.16.post1
     - grpcio-status==1.58 # To keep in sync with 1.58 grpcio which is installed for Morpheus
     - nemollm
