--- a/docker/conda/environments/cuda11.8_examples.yml
+++ b/docker/conda/environments/cuda11.8_examples.yml
@@ -36,10 +36,10 @@ dependencies:
     - dill=0.3.6
     - distributed>=2023.1.1
     - huggingface_hub=0.10.1 # work-around for https://github.com/UKPLab/sentence-transformers/issues/1762
-    - langchain=0.0.190
     - libwebp>=1.3.2 # Required for CVE mitigation: https://nvd.nist.gov/vuln/detail/CVE-2023-4863
     - mlflow>=2.2.1,<3
     - newspaper3k=0.2
+    - numexpr=2.8.7
     - openai=0.28
     - papermill=2.3.4
     - pypdf=3.16
@@ -62,4 +62,6 @@ dependencies:
         - farm-haystack==1.22.1
         - google-search-results==2.4
         - grpcio-status==1.58 # To keep in sync with 1.58 grpcio which is installed for Morpheus
+        - langchain==0.0.351
+        - llama-index==0.9.16.post1
         - nemollm
