--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -33,6 +33,23 @@ files:
       - runtime
       - checks
 
+  dev:
+    output: conda
+    matrix:
+      cuda: ["11.8"]
+      arch: [x86_64]
+    includes:
+      - data_retrieval
+      - build_cpp
+      - development_cpp
+      - benchmark_cpp
+      - runtime
+      - test_python_morpheus
+      - docs
+      - cudatoolkit
+      - runtime
+      - checks
+
   build:
     output: none
     matrix:
