--- a/conda/environments/dev_cuda-118_arch-x86_64.yaml
+++ b/conda/environments/dev_cuda-118_arch-x86_64.yaml
@@ -59,6 +59,7 @@ dependencies:
 - pre-commit
 - protobuf=4.21.*
 - pybind11-stubgen=0.10
+- pylint>=2.17.4,<2.18
 - pytest
 - pytest-asyncio
 - pytest-benchmark>=4.0
