--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include versioneer.py
 include morpheus/_version.py
 recursive-include morpheus/data *
-recursive-include morpheus *.so py.typed *.pyi
+recursive-include morpheus *.cpython*.so py.typed *.pyi
