--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,7 @@ skip=
     buck-out
     build
     dist
+    examples/external_cpp_stage/morpheus_ex/external_cpp_stage/_version.py
     models
     morpheus/_version.py
     thirdparty
