Yapf issue #984 has been fixed in our current version of yapf. Remove usage of older YAPF_EXCLUDE_FLAGS work-around

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ asyncio_mode = "auto"
 ignore_patterns = [
   "**/*.pyx",
   "**/*.pxd",
+  "versioneer.py",
+  "morpheus/_version.py",
+  "examples/external_cpp_stage/morpheus_ex/external_cpp_stage/_version.py",
 ]
 
 [tool.mypy]
