--- a/examples/developer_guide/3_simple_cpp_stage/pyproject.toml
+++ b/examples/developer_guide/3_simple_cpp_stage/pyproject.toml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2021-2022,NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,11 +14,11 @@
 # limitations under the License.
 
 [build-system]
-requires = ["setuptools", "wheel", "versioneer[toml]==0.29"]
 build-backend = "setuptools.build_meta"
+requires = ["setuptools", "wheel", "versioneer[toml]==0.29"]
 
 [tool.yapfignore]
 ignore_patterns = [
   "**/versioneer.py",
-  "**/_version.py"
+  "**/_version.py",
 ]
