--- a/examples/developer_guide/3_simple_cpp_stage/setup.cfg
+++ b/examples/developer_guide/3_simple_cpp_stage/setup.cfg
@@ -14,9 +14,9 @@
 # limitations under the License.
 
 [metadata]
-name = morpheus-ex-external-cpp-stage
+name = morpheus_pass_thru_example
 version = attr: versioneer.get_version
-description = Morpheus Example - External C++ Stage
+description = Morpheus Example - Pass Thru C++ Stage
 author = NVIDIA Corporation
 license = Apache
 classifiers =
@@ -31,7 +31,7 @@ packages = find_namespace:
 
 
 [options.packages.find]
-include=morpheus_ex.*
+include=morpheus_pass_thru_example.*
 
 # See the docstring in versioneer.py for instructions. Note that you must
 # re-run 'versioneer.py setup' after changing this section, and commit the
@@ -39,7 +39,6 @@ include=morpheus_ex.*
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = morpheus_ex/external_cpp_stage/_version.py
+versionfile_source = morpheus_pass_thru_example/_version.py
 versionfile_build = morpheus_ex/external_cpp_stage/_version.py
 tag_prefix = v
-parentdir_prefix = morpheus_ex_external_cpp_stage-
