--- a/examples/developer_guide/3_simple_cpp_stage/morpheus_pass_thru_example/CMakeLists.txt
+++ b/examples/developer_guide/3_simple_cpp_stage/morpheus_pass_thru_example/CMakeLists.txt
@@ -1,10 +1,11 @@
-# Copyright (c) 2023-2024, NVIDIA CORPORATION.
+# SPDX-FileCopyrightText: Copyright (c) 2022-2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+# http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
@@ -12,6 +13,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-from . import _version
+list(APPEND CMAKE_MESSAGE_CONTEXT "pass_thru_cpp_stage")
 
-__version__ = _version.get_versions()['version']
+morpheus_add_pybind11_module(pass_thru_cpp
+  SOURCE_FILES
+    "_lib/pass_thru.cpp"
+  INCLUDE_DIRS
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/_lib>
+  LINK_TARGETS
+    morpheus
+)
+
+list(POP_BACK CMAKE_MESSAGE_CONTEXT)
