--- a/examples/developer_guide/3_simple_cpp_stage/setup.cfg
+++ b/examples/developer_guide/3_simple_cpp_stage/setup.cfg
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 [metadata]
-name = morpheus_pass_thru_example
+name = 3_simple_cpp_stage
 version = attr: versioneer.get_version
 description = Morpheus Example - Pass Thru C++ Stage
 author = NVIDIA Corporation
@@ -31,7 +31,7 @@ packages = find_namespace:
 
 
 [options.packages.find]
-include=morpheus_pass_thru_example.*
+include=src.*
 
 # See the docstring in versioneer.py for instructions. Note that you must
 # re-run 'versioneer.py setup' after changing this section, and commit the
@@ -39,6 +39,6 @@ include=morpheus_pass_thru_example.*
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = morpheus_pass_thru_example/_version.py
-versionfile_build = morpheus_ex/external_cpp_stage/_version.py
+versionfile_source = src/_version.py
+versionfile_build = src/_version.py
 tag_prefix = v
