Fix package layout

--- a/examples/developer_guide/3_simple_cpp_stage/setup.cfg
+++ b/examples/developer_guide/3_simple_cpp_stage/setup.cfg
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 [metadata]
-name = 3_simple_cpp_stage
+name = simple_cpp_stage
 version = attr: versioneer.get_version
 description = Morpheus Example - Pass Thru C++ Stage
 author = NVIDIA Corporation
@@ -27,11 +27,12 @@ classifiers =
 [options]
 zip_safe = False
 include_package_data = True
-packages = find_namespace:
-
+packages = find:
+package_dir =
+    =src
 
 [options.packages.find]
-include=src.*
+where = src
 
 # See the docstring in versioneer.py for instructions. Note that you must
 # re-run 'versioneer.py setup' after changing this section, and commit the
