--- a/examples/developer_guide/3_simple_cpp_stage/pyproject.toml
+++ b/examples/developer_guide/3_simple_cpp_stage/pyproject.toml
@@ -17,8 +17,17 @@
 build-backend = "setuptools.build_meta"
 requires = ["setuptools", "wheel", "versioneer[toml]==0.29"]
 
+[tool.versioneer]
+# See the docstring in versioneer.py for instructions. Note that you must
+# re-run 'versioneer.py setup' after changing this section, and commit the
+# resulting files.
+VCS = "git"
+style = "pep440"
+tag_prefix = "v"
+versionfile_build = "src/_version.py"
+versionfile_source = "src/_version.py"
+
 [tool.yapfignore]
 ignore_patterns = [
-  "**/versioneer.py",
   "**/_version.py",
 ]
