--- a/examples/developer_guide/3_simple_cpp_stage/pyproject.toml
+++ b/examples/developer_guide/3_simple_cpp_stage/pyproject.toml
@@ -24,8 +24,8 @@ requires = ["setuptools", "wheel", "versioneer[toml]==0.29"]
 VCS = "git"
 style = "pep440"
 tag_prefix = "v"
-versionfile_build = "src/_version.py"
-versionfile_source = "src/_version.py"
+versionfile_build = "src/simple_cpp_stage/_version.py"
+versionfile_source = "src/simple_cpp_stage/_version.py"
 
 [tool.yapfignore]
 ignore_patterns = [
