Update isort config [skip ci]

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,12 +62,11 @@ skip=
     buck-out
     build
     dist
-    examples/developer_guide/3_simple_cpp_stage/src/simple_cpp_stage/_version.py
     models
-    morpheus/_version.py
     thirdparty
     # Skip versioneer.py as its third-party
     versioneer.py
+    _version.py
 
 # ===== flake8 Config =====
 [flake8]
