Add data_retrieval to build target as git-lfs is needed for several ci checks even if not fetching data

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -56,6 +56,7 @@ files:
       cuda: ["11.8"]
       arch: [x86_64]
     includes:
+      - data_retrieval
       - build_cpp
       - development
       - benchmark_cpp
