--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -165,6 +165,7 @@ dependencies:
           - include-what-you-use=0.20
           - isort
           - pylint>=2.17.4,<2.18 # 2.17.4 contains a fix for toml support
+          - versioneer=0.22
           - yapf=0.40.1
 
   docs:
