--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,8 @@ default_section=THIRDPARTY
 sections=FUTURE,STDLIB,THIRDPARTY,DASK,RAPIDS,FIRSTPARTY,LOCALFOLDER
 skip=
     __init__.py
+    # Skip _version.py as it is auto-generated
+    _version.py
     .eggs
     .git
     .hg
@@ -64,9 +66,6 @@ skip=
     dist
     models
     thirdparty
-    # Skip versioneer.py as its third-party
-    versioneer.py
-    _version.py
 
 # ===== flake8 Config =====
 [flake8]
@@ -83,8 +82,7 @@ exclude =
    docs,
    models/,
    morpheus/models/dfencoder/*.py,
-   thirdparty,
-   versioneer.py
+   thirdparty
 max-line-length = 120
 max-doc-length = 120
 
