--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -4,112 +4,115 @@ channels:
 - conda-forge
 - huggingface
 - rapidsai
-- nvidia/label/cuda-12.0.0
+- nvidia/label/cuda-12.1.0
 - nvidia
 - rapidsai-nightly
 - nvidia/label/dev
 - pytorch
-- dglteam/label/cu118
+- defaults
 dependencies:
 - appdirs
-- arxiv=1.4
-- benchmark=1.6.0
-- boost-cpp=1.82
+- arxiv>=1.4
+- benchmark>=1.6.0
+- boost-cpp>=1.82
 - boto3
-- breathe=4.34.0
+- breathe>=4.34.0
 - clangdev=16
 - click >=8
 - click>=8
-- cmake=3.26
 - cmake=3.26.4
-- cuda-cudart-dev=12.0
+- cuda-cudart-dev=12.1
 - cuda-nvcc
-- cuda-nvml-dev=12.0
-- cuda-nvrtc-dev=12.0
-- cuda-tools=12.0
-- cuda-version=12.0
+- cuda-nvml-dev=12.1
+- cuda-nvrtc-dev=12.1
+- cuda-nvtx-dev=12.1
+- cuda-tools=12.1
+- cuda-version=12.1
 - cudf=23.12
-- cuml=23.12
+- cuml=23.12.*
 - cxx-compiler
 - cython>=3.0.3
 - dask>=2023.1.1
-- datacompy=0.8
-- dgl=1.0.2
+- datacompy>=0.8
 - dill
-- dill=0.3.6
+- dill>=0.3.6
 - distributed>=2023.1.1
-- doxygen=1.9.2
+- doxygen>=1.9.2
 - elasticsearch==8.9.0
-- environs=9.5
-- exhale=0.3.6
-- feedparser=6.0.10
+- environs>=9.5
+- exhale>=0.3.6
+- feedparser>=6.0.10
 - flake8
 - gcc_linux-64=11.2
 - git-lfs
 - gputil
 - grpcio
 - gxx_linux-64=11.2
-- huggingface_hub=0.10.1
+- huggingface_hub>=0.10.1
 - include-what-you-use=0.20
 - ipython
 - isort
-- langchain=0.0.190
-- librdkafka=1.9.2
+- langchain>=0.0.190
+- librdkafka>=1.9.2
 - libwebp>=1.3.2
-- minio=7.1
+- minio>=7.1
 - mlflow>=2.2.1,<3
 - mrc=24.03
-- myst-parser=0.17.2
+- myst-parser>=0.17.2
 - nbsphinx
-- newspaper3k=0.2
-- ninja=1.10
+- newspaper3k>=0.2
+- ninja>=1.10
 - nlohmann_json=3.9
 - nodejs=18.*
-- numpydoc=1.4
-- nvtabular=23.08
-- openai=0.28
-- papermill=2.3.4
+- numpydoc>=1.4
+- nvtabular>=23.08
+- openai>=0.28
+- papermill>=2.3.4
 - pip
-- pluggy=1.0
+- pluggy>=1.0
 - pre-commit
 - protobuf>=4.21.*
 - pybind11-stubgen=0.10
-- pylint>=2.17.4,<2.18
-- pypdf=3.16
+- pylint>=2.17.4
+- pypdf>=3.16
 - pytest
 - pytest-asyncio
 - pytest-benchmark>=4.0
 - pytest-cov
-- python-confluent-kafka=1.9.2
-- python-dotenv=1.0
+- python-confluent-kafka>=1.9.2
+- python-dotenv>=1.0
 - python-graphviz
+- python=3.10
 - pytorch-cuda
-- pytorch=2.0.1
-- rapidjson=1.1.0
-- requests-cache=1.1
+- pytorch=*=*cuda*
+- rapidjson>=1.1.0
+- requests-cache>=1.1
 - s3fs>=2023.6
-- scikit-build=0.17.1
-- scikit-learn=1.2.2
+- scikit-build>=0.17.1
+- scikit-learn>=1.2.2
 - sentence-transformers
 - sphinx
 - sphinx_rtd_theme
-- sqlalchemy<2.0
-- tqdm=4
-- transformers=4.30.2
-- tritonclient=2.26
-- typing_utils=0.1
-- ucx=1.15
-- ujson=5.8
-- watchdog=2.1
+- sqlalchemy
+- tqdm>=4
+- transformers>=4.30.2
+- tritonclient>=2.26
+- typing_utils>=0.1
+- ucx>=1.15
+- ujson>=5.8
+- watchdog>=2.1
 - websockets
-- yapf=0.40.1
+- yapf>=0.40.1
 - pip:
+  - --find-links https://data.dgl.ai/wheels-test/repo.html
+  - --find-links https://data.dgl.ai/wheels/cu121/repo.html
   - databricks-connect
+  - dgl
+  - dglgo
   - google-search-results==2.4
   - grpcio-status==1.58
   - milvus==2.3.2
   - nemollm
-  - pyarrow_hotfix
   - pymilvus==2.3.2
   - pytest-kafka==0.6.0
-name: all_cuda-120_arch-x86_64
+name: all_cuda-121_arch-x86_64
