--- a/conda/environments/dev_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/dev_cuda-121_arch-x86_64.yaml
@@ -4,37 +4,37 @@ channels:
 - conda-forge
 - huggingface
 - rapidsai
-- nvidia/label/cuda-12.0.0
+- nvidia/label/cuda-12.1.0
 - nvidia
 - rapidsai-nightly
 - nvidia/label/dev
 - pytorch
-- dglteam/label/cu118
+- defaults
 dependencies:
 - appdirs
-- benchmark=1.6.0
-- boost-cpp=1.82
-- breathe=4.34.0
+- benchmark>=1.6.0
+- boost-cpp>=1.82
+- breathe>=4.34.0
 - clangdev=16
 - click >=8
 - click>=8
-- cmake=3.26
 - cmake=3.26.4
-- cuda-cudart-dev=12.0
+- cuda-cudart-dev=12.1
 - cuda-nvcc
-- cuda-nvml-dev=12.0
-- cuda-nvrtc-dev=12.0
-- cuda-tools=12.0
-- cuda-version=12.0
+- cuda-nvml-dev=12.1
+- cuda-nvrtc-dev=12.1
+- cuda-nvtx-dev=12.1
+- cuda-tools=12.1
+- cuda-version=12.1
 - cudf=23.12
 - cxx-compiler
 - cython>=3.0.3
-- datacompy=0.8
+- datacompy>=0.8
 - dill
-- doxygen=1.9.2
+- doxygen>=1.9.2
 - elasticsearch==8.9.0
-- exhale=0.3.6
-- feedparser=6.0.10
+- exhale>=0.3.6
+- feedparser>=6.0.10
 - flake8
 - gcc_linux-64=11.2
 - git-lfs
@@ -44,48 +44,48 @@ dependencies:
 - include-what-you-use=0.20
 - ipython
 - isort
-- librdkafka=1.9.2
+- librdkafka>=1.9.2
 - mlflow>=2.2.1,<3
 - mrc=24.03
-- myst-parser=0.17.2
+- myst-parser>=0.17.2
 - nbsphinx
-- ninja=1.10
+- ninja>=1.10
 - nlohmann_json=3.9
 - nodejs=18.*
-- numpydoc=1.4
-- nvtabular=23.08
+- numpydoc>=1.4
+- nvtabular>=23.08
 - pip
-- pluggy=1.0
+- pluggy>=1.0
 - pre-commit
 - protobuf>=4.21.*
 - pybind11-stubgen=0.10
-- pylint>=2.17.4,<2.18
+- pylint>=2.17.4
 - pytest
 - pytest-asyncio
 - pytest-benchmark>=4.0
 - pytest-cov
-- python-confluent-kafka=1.9.2
+- python-confluent-kafka>=1.9.2
 - python-graphviz
+- python=3.10
 - pytorch-cuda
-- pytorch=2.0.1
-- rapidjson=1.1.0
-- requests-cache=1.1
-- scikit-build=0.17.1
-- scikit-learn=1.2.2
+- pytorch=*=*cuda*
+- rapidjson>=1.1.0
+- requests-cache>=1.1
+- scikit-build>=0.17.1
+- scikit-learn>=1.2.2
 - sphinx
 - sphinx_rtd_theme
-- sqlalchemy<2.0
-- tqdm=4
-- tritonclient=2.26
-- typing_utils=0.1
-- ucx=1.15
-- watchdog=2.1
+- sqlalchemy
+- tqdm>=4
+- tritonclient>=2.26
+- typing_utils>=0.1
+- ucx>=1.15
+- watchdog>=2.1
 - websockets
-- yapf=0.40.1
+- yapf>=0.40.1
 - pip:
   - databricks-connect
   - milvus==2.3.2
-  - pyarrow_hotfix
   - pymilvus==2.3.2
   - pytest-kafka==0.6.0
-name: dev_cuda-120_arch-x86_64
+name: dev_cuda-121_arch-x86_64
