--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -18,7 +18,7 @@ files:
   all:
     output: conda
     matrix:
-      cuda: ["12.0"]
+      cuda: ["12.1"]
       arch: [x86_64]
     includes:
       - data_retrieval
@@ -30,13 +30,14 @@ files:
       - test_python_morpheus
       - docs
       - cudatoolkit
+      - python
       - runtime
       - checks
 
   dev:
     output: conda
     matrix:
-      cuda: ["12.0"]
+      cuda: ["12.1"]
       arch: [x86_64]
     includes:
       - data_retrieval
@@ -47,13 +48,14 @@ files:
       - test_python_morpheus
       - docs
       - cudatoolkit
+      - python
       - runtime
       - checks
 
   build:
     output: none
     matrix:
-      cuda: ["12.0"]
+      cuda: ["12.1"]
       arch: [x86_64]
     includes:
       - build_cpp
@@ -62,11 +64,12 @@ files:
       - runtime
       - test_python_morpheus
       - cudatoolkit
+      - python
 
   test:
     output: none
     matrix:
-      cuda: ["12.0"]
+      cuda: ["12.1"]
       arch: [x86_64]
     includes:
       - data_retrieval
@@ -77,17 +80,19 @@ files:
       - test_python_morpheus
       - examples
       - cudatoolkit
+      - python
 
   docs:
     output: none
     matrix:
-      cuda: ["12.0"]
+      cuda: ["12.1"]
       arch: [x86_64]
     includes:
       - data_retrieval
       - build_cpp
       - benchmark_cpp
       - cudatoolkit
+      - python
       - docs
       - runtime
       - examples
@@ -95,27 +100,29 @@ files:
   runtime:
     output: none
     matrix:
-      cuda: ["12.0"]
+      cuda: ["12.1"]
       arch: [x86_64]
     includes:
       - runtime
+      - python
 
   checks:
     output: none
     includes:
       - checks
+      - python
 
 
 channels:
   - conda-forge
   - huggingface
   - rapidsai
-  - nvidia/label/cuda-12.0.0
+  - nvidia/label/cuda-12.1.0
   - nvidia
   - rapidsai-nightly
   - nvidia/label/dev
   - pytorch
-  - dglteam/label/cu118
+  - defaults
 
 dependencies:
 
@@ -126,22 +133,21 @@ dependencies:
           - mrc=24.03 # should this be in build, or somewhere else?
           - gcc_linux-64=11.2
           - gxx_linux-64=11.2
-          - cmake=3.26
-          - boost-cpp=1.82
+          - boost-cpp>=1.82
           - cmake=3.26.4
           - cuda-nvcc
           - cudf=23.12
           - cxx-compiler
           - cython>=3.0.3
-          - librdkafka=1.9.2
-          - ninja=1.10
+          - librdkafka>=1.9.2
+          - ninja>=1.10
           - nlohmann_json=3.9
           - protobuf>=4.21.*
           - pybind11-stubgen=0.10
-          - rapidjson=1.1.0
-          - scikit-build=0.17.1
-          - tritonclient=2.26 # Required by NvTabular, force the version, so we get protobufs compatible with 4.21
-          - ucx=1.15
+          - rapidjson>=1.1.0
+          - scikit-build>=0.17.1
+          - tritonclient>=2.26 # Required by NvTabular, force the version, so we get protobufs compatible with 4.21
+          - ucx>=1.15
 
   checks:
     common:
@@ -163,64 +169,69 @@ dependencies:
           - flake8
           - include-what-you-use=0.20
           - isort
-          - pylint>=2.17.4,<2.18 # 2.17.4 contains a fix for toml support
-          - yapf=0.40.1
+          - pylint>=2.17.4 #,<2.18 # 2.17.4 contains a fix for toml support
+          - yapf>=0.40.1
 
   docs:
     common:
       - output_types: [conda]
         packages:
-          - breathe=4.34.0
-          - doxygen=1.9.2
-          - exhale=0.3.6
+          - breathe>=4.34.0
+          - doxygen>=1.9.2
+          - exhale>=0.3.6
           - ipython
-          - myst-parser=0.17.2
+          - myst-parser>=0.17.2
           - nbsphinx
           - python-graphviz
           - sphinx
           - sphinx_rtd_theme
-          - numpydoc=1.4
-          - pluggy=1.0
+          - numpydoc>=1.4
+          - pluggy>=1.0
           - &click click >=8
 
   benchmark_cpp:
     common:
       - output_types: [conda]
         packages:
-          - benchmark=1.6.0
+          - benchmark>=1.6.0
 
   examples:
     common:
       - output_types: [conda]
         packages:
-          - arxiv=1.4
+          - arxiv>=1.4
           - boto3
-          - cuml=23.12
+          - cuml=23.12.*
           - dask>=2023.1.1
-          - dgl=1.0.2
-          - dill=0.3.6
+          # - dglteam/label/cu121::dgl
+          - dill>=0.3.6
           - distributed>=2023.1.1
-          - huggingface_hub=0.10.1 # work-around for https://github.com/UKPLab/sentence-transformers/issues/1762
-          - langchain=0.0.190
+          - huggingface_hub>=0.10.1 # work-around for https://github.com/UKPLab/sentence-transformers/issues/1762
+          - langchain>=0.0.190
           - libwebp>=1.3.2 # Required for CVE mitigation: https://nvd.nist.gov/vuln/detail/CVE-2023-4863
+          #- libwebp=1.72
           - mlflow>=2.2.1,<3
-          - newspaper3k=0.2
-          - openai=0.28
-          - papermill=2.3.4
-          - pypdf=3.16
+          - newspaper3k>=0.2
+          - openai>=0.28
+          - papermill>=2.3.4
+          - pypdf>=3.16
           - s3fs>=2023.6
           - sentence-transformers
-          - transformers=4.30.2 # newer versions are incompatible with our pinned version of huggingface_hub
+          - transformers>=4.30.2 # newer versions are incompatible with our pinned version of huggingface_hub
           ####### Pip Transitive Dependencies (keep sorted!) #######
           # These are dependencies that are available on conda, but are required by the pip packages listed below. Its much
           # better to install them with conda than pip to allow for better dependency resolution.
-          - environs=9.5
-          - minio=7.1
-          - python-dotenv=1.0
-          - ujson=5.8
+          - environs>=9.5
+          - minio>=7.1
+          - python-dotenv>=1.0
+          - ujson>=5.8
           ####### Pip Dependencies (keep sorted!) #######
           - pip
           - pip:
+              - --find-links https://data.dgl.ai/wheels/cu121/repo.html
+              - --find-links https://data.dgl.ai/wheels-test/repo.html
+              - dgl
+              - dglgo
               - google-search-results==2.4
               - grpcio-status==1.58 # To keep in sync with 1.58 grpcio which is installed for Morpheus
               - nemollm
@@ -232,31 +243,30 @@ dependencies:
         packages:
           - appdirs
           - click>=8
-          - datacompy=0.8
+          - datacompy>=0.8
           - dill
           - elasticsearch==8.9.0
-          - feedparser=6.0.10
+          - feedparser>=6.0.10
           - gputil
           - grpcio
           - mlflow>=2.2.1,<3
-          - numpydoc=1.4
-          - nvtabular=23.08
-          - python-confluent-kafka=1.9.2
+          - numpydoc>=1.4
+          - nvtabular>=23.08
+          - python-confluent-kafka>=1.9.2
           - python-graphviz
           - pytorch-cuda
-          - pytorch=2.0.1
-          - requests-cache=1.1
-          - scikit-learn=1.2.2
-          - sqlalchemy<2.0 # 2.0 is incompatible with pandas=1.3
-          - tqdm=4
-          - typing_utils=0.1
-          - watchdog=2.1
+          - pytorch=*=*cuda*
+          - requests-cache>=1.1
+          - scikit-learn>=1.2.2
+          - sqlalchemy
+          - tqdm>=4
+          - typing_utils>=0.1
+          - watchdog>=2.1
           - websockets
           - pip
           - pip:
             - databricks-connect
             - milvus==2.3.2
-            - pyarrow_hotfix
             - pymilvus==2.3.2
 
   test_python_morpheus:
@@ -272,15 +282,22 @@ dependencies:
           - pip:
               - pytest-kafka==0.6.0
 
+  python:
+    common:
+      - output_types: [conda]
+        packages:
+          - python=3.10
+
   cudatoolkit:
     specific:
       - output_types: [conda]
         matrices:
           - matrix:
-              cuda: "12.0"
+              cuda: "12.1"
             packages:
-              - cuda-cudart-dev=12.0
-              - cuda-nvml-dev=12.0
-              - cuda-nvrtc-dev=12.0
-              - cuda-tools=12.0
-              - cuda-version=12.0
+              - cuda-cudart-dev=12.1
+              - cuda-nvml-dev=12.1
+              - cuda-nvrtc-dev=12.1
+              - cuda-tools=12.1
+              - cuda-version=12.1
+              - cuda-nvtx-dev=12.1
