--- a/examples/llm/vdb_upload/vdb_config.yaml
+++ b/examples/llm/vdb_upload/vdb_config.yaml
@@ -39,7 +39,7 @@ vdb_pipeline:
         batch_size: 128
         cache_dir: "./.cache/http"
         cooldown_interval: 600
-        enable_cache: false
+        enable_cache: False
         interval_secs: 600
         request_timeout: 2.0
         run_indefinitely: true
@@ -53,8 +53,11 @@ vdb_pipeline:
       config:
         filenames:
           - "morpheus/data/scratch/random_cybersecurity_data.txt"
+          - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-1.pdf"
         watch: false
 
+    # Custom source example -- Here we just use the filesystem source but specify
+    the module to use, explicitly.
     - type: custom
       name: "demo_custom_source"
       config:
@@ -64,4 +67,23 @@ vdb_pipeline:
         module_output_id: "output"
         filenames:
           - "morpheus/data/scratch/random_cybersecurity_data.txt"
+          # - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-1.pdf"
+          # - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-2.pdf"
+          # - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-3.pdf"
+          # - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-4.pdf"
+          # - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-5.pdf"
         watch: false
+
+  embeddings:
+    model_name: "all-MiniLM-L6-v2"
+    model_kwargs:
+      - device: "cuda"
+    encode_kwargs:
+      - normalize_embeddings: true
+    size: 384
+
+  vdb:
+    service: "milvus"  # Specify the type of vector database
+    uri: "http://localhost:19530"  # URI for connecting to the Vector Database server
+    resource_name: "VDB_GENERAL"  # Identifier for the resource in the vector database
+    recreate: true  # Whether to recreate the resource if it already exists
