Specify dependencies in setup.cfg

--- a/examples/developer_guide/4_rabbitmq_cpp_stage/setup.cfg
+++ b/examples/developer_guide/4_rabbitmq_cpp_stage/setup.cfg
@@ -30,6 +30,9 @@ include_package_data = True
 packages = find:
 package_dir =
     =src
+python_requires = >=3.10
+install_requires =
+    pika=="1.2.0"
 
 [options.packages.find]
 where = src
