Fix version spec

--- a/examples/developer_guide/4_rabbitmq_cpp_stage/setup.cfg
+++ b/examples/developer_guide/4_rabbitmq_cpp_stage/setup.cfg
@@ -32,7 +32,7 @@ package_dir =
     =src
 python_requires = >=3.10
 install_requires =
-    pika=="1.2.0"
+    pika ==1.2.0
 
 [options.packages.find]
 where = src
