Switch to using conda to fetch pyarrow-hotfix

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -243,6 +243,7 @@ dependencies:
           - nb_conda_kernels
           - numpydoc=1.4
           - nvtabular=23.06
+          - pyarrow-hotfix
           - python-confluent-kafka=1.9.2
           - python-graphviz
           - pytorch-cuda
@@ -258,7 +259,6 @@ dependencies:
           - pip:
             - databricks-connect
             - milvus==2.3.2
-            - pyarrow_hotfix
             - pymilvus==2.3.2
 
   test_python_morpheus:
