--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -82,6 +82,7 @@ dependencies:
     - pluggy=1.0
     - protobuf=4.21.*
     - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
+    - pyarrow-hotfix # CVE-2023-47248. See morpheus/__init__.py for more details
     - pybind11-stubgen=0.10.5
     - pydot
     - pylint>=2.17.4,<2.18 # 2.17.4 contains a fix for toml support
@@ -123,6 +124,5 @@ dependencies:
         # Add additional dev dependencies here
         - databricks-connect
         - milvus==2.3.2
-        - pyarrow_hotfix # CVE-2023-47248. See morpheus/__init__.py for more details
         - pymilvus==2.3.2
         - pytest-kafka==0.6.0
