--- a/conda/environments/all_cuda-118_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-118_arch-x86_64.yaml
@@ -34,7 +34,7 @@ dependencies:
 - cython=0.29.24
 - dask>=2023.1.1
 - datacompy=0.8
-- dgl=1.1.1
+- dgl=1.0.2
 - dill
 - dill=0.3.6
 - distributed>=2023.1.1
@@ -46,6 +46,7 @@ dependencies:
 - flake8
 - gcc_linux-64=11.2
 - git-lfs
+- glog=0.6
 - grpcio
 - gxx_linux-64=11.2
 - huggingface_hub=0.10.1
@@ -65,7 +66,6 @@ dependencies:
 - ninja=1.10
 - nlohmann_json=3.9
 - nodejs=18.*
-- numpy>=1.21,<1.25
 - numpydoc=1.4
 - nvtabular=23.06
 - openai=0.28
@@ -74,6 +74,7 @@ dependencies:
 - pluggy=1.0
 - pre-commit
 - protobuf=4.21.*
+- pyarrow-hotfix
 - pybind11-stubgen=0.10
 - pylint>=2.17.4,<2.18
 - pypdf=3.16
@@ -95,13 +96,13 @@ dependencies:
 - sphinx
 - sphinx_rtd_theme
 - sqlalchemy<2.0
-- sysroot_linux-64=2.17
 - tqdm=4
 - transformers=4.30.2
 - tritonclient=2.26
 - typing_utils=0.1
 - ucx=1.14
 - ujson=5.8
+- versioneer
 - watchdog=2.1
 - websockets
 - yapf=0.40.1
@@ -111,9 +112,7 @@ dependencies:
   - grpcio-status==1.58
   - milvus==2.3.2
   - nemollm
-  - pyarrow_hotfix
   - pymilvus==2.3.2
   - pytest-kafka==0.6.0
-  - rapids-dependency-file-generator
 name: all_cuda-118_arch-x86_64_py-310
 
