add log monitoring to grafana dfp example

--- a/examples/digital_fingerprinting/production/conda_env.yml
+++ b/examples/digital_fingerprinting/production/conda_env.yml
@@ -32,3 +32,7 @@ dependencies:
     - nvtabular=23.06
     - papermill
     - s3fs>=2023.6
+
+    ##### Pip Dependencies (keep sorted!) #######
+    - pip:
+        - python-logging-loki
