--- a/examples/digital_fingerprinting/production/grafana/datasources/datasources.yaml
+++ b/examples/digital_fingerprinting/production/grafana/datasources/datasources.yaml
@@ -16,6 +16,12 @@
 apiVersion: 1
 
 datasources:
+  - name: Loki
+    type: loki
+    access: proxy
+    url: http://loki:3100
+    jsonData:
+    maxLines: 1000
   - name: csv-datasource
     uid: 1257c93b-f998-438c-a784-7e90fb94fb36
     type: marcusolsson-csv-datasource
