--- a/examples/llm/vdb_upload/requirements.yaml
+++ b/examples/llm/vdb_upload/requirements.yaml
@@ -35,7 +35,7 @@ dependencies:
 
   ####### Pip Dependencies (keep sorted!) #######
   - pip:
-    - farm-haystack==1.22.1
+    - farm-haystack[file-conversion]
     - grpcio-status==1.58 # To keep in sync with 1.58 grpcio which is installed for Morpheus
     - langchain==0.0.310
     - pymilvus==2.3.2 # The conda package is woefully out of date and incorrect
