Specify a version for sysroot_linux-64, without this I was getting out of date kernel headers and glibc link errors

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -148,6 +148,7 @@ dependencies:
           - pybind11-stubgen=0.10
           - rapidjson=1.1.0
           - scikit-build=0.17.1
+          - sysroot_linux-64=2.17
           - tritonclient=2.26 # Required by NvTabular, force the version, so we get protobufs compatible with 4.21
           - ucx=1.14
 
