--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -164,6 +164,9 @@ dependencies:
           - isort
           - pylint>=2.17.4,<2.18 # 2.17.4 contains a fix for toml support
           - yapf=0.40.1
+          - pip
+          - pip:
+            - rapids-dependency-file-generator
 
   docs:
     common:
@@ -196,7 +199,7 @@ dependencies:
           - boto3
           - cuml=23.06
           - dask>=2023.1.1
-          - dgl=1.0.2
+          - dgl=1.1.1
           - dill=0.3.6
           - distributed>=2023.1.1
           - huggingface_hub=0.10.1 # work-around for https://github.com/UKPLab/sentence-transformers/issues/1762
