--- a/conda/environments/all_cuda-118_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-118_arch-x86_64.yaml
@@ -83,6 +83,7 @@ dependencies:
 - python-confluent-kafka=1.9.2
 - python-dotenv=1.0
 - python-graphviz
+- python=3.10
 - pytorch-cuda
 - pytorch=2.0.1
 - rapidjson=1.1.0
