--- a/conda/environments/dev_cuda-118_arch-x86_64.yaml
+++ b/conda/environments/dev_cuda-118_arch-x86_64.yaml
@@ -66,6 +66,7 @@ dependencies:
 - pytest-cov
 - python-confluent-kafka=1.9.2
 - python-graphviz
+- python=3.10
 - pytorch-cuda
 - pytorch=2.0.1
 - rapidjson=1.1.0
